# discord_bot_v2

./: .discloudignore  .env.example  .gitignore  Procfile  README.md  discloud.config  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/discord_bot_v2/: __init__.py  __main__.py  audit.py  bot.py  config.py  database.py  finance.py  logging_config.py  reporting.py  views.py
tests/: test_audit.py  test_bot.py  test_config.py  test_database.py  test_finance.py  test_logging_config.py  test_reporting.py  test_views.py
