[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "discord-bot-v2"
version = "0.1.0"
description = "Bot Discord com estrutura reprodutível e pronta para automação"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "discord.py>=2.4,<3",
  "python-dotenv>=1.0,<2",
  "tzdata>=2025.2; platform_system == 'Windows'",
]

[project.optional-dependencies]
dev = [
  "build>=1.2,<2",
  "mypy>=1.10,<2",
  "pre-commit>=3.7,<5",
  "pytest>=8.2,<9",
  "pytest-cov>=5,<7",
  "pytest-asyncio>=0.23,<2",
  "ruff>=0.5,<1",
]

[project.scripts]
discord-bot = "discord_bot_v2.bot:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "--cov=discord_bot_v2 --cov-report=term-missing --cov-fail-under=60"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["discord_bot_v2"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["discord_bot_v2"]
exclude = ["tests"]
